--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "not dead"
   ],
   "dependencies": {
-    "gotrue-js": "^0.9.29",
-    "netlify-identity-widget": "^1.9.2",
-    "node-fetch": "^2.6.7"
+    "mongodb": "^4.7.0",
+    "netlify-identity-widget": "^1.9.2"
   }
 }
